# jhc-components

./: Ideas.md  README.md  cabal.project  mklibs.sh  sanitize_tabs_and_spaces.sh  stack.yaml
examples/: Calendar.hs  Primes.hs
jhc-app/: ChangeLog.md  hs_src_config.h  jhc-app.cabal
jhc-app/src/: Main.hs
jhc-common/: jhc-common.cabal
jhc-common/cbits/: config.h
jhc-common/embed/: ChangeLog  shortchange.txt  targets.ini
jhc-common/src/: FlagDump.hs  FlagOpts.hs  RawFiles.hs
jhc-common/src/C/: FFI.hs  Prims.hs
jhc-common/src/Cmm/: Op.hs
jhc-common/src/Name/: Id.hs  Prim.hs
jhc-common/src/Util/: ExitCodes.hs  Graph.hs  Graphviz.hs  IntBag.hs  RWS.hs  ReaderWriter.hs
jhc-compat/: jhc-compat.cabal
jhc-compat/haskell98/: Locale.hs
jhc-core/: jhc-core.cabal
jhc-core/src/: DataConstructors.hs
jhc-core/src/E/: Binary.hs  CPR.hs  Demand.hs  E.hs  Eta.hs  Main.hs  PrimDecode.hs  SSimplify.hs  Show.hs  ToHs.hs  Type.hs
jhc-core/src/Ho/: Binary.hs  Type.hs
jhc-frontend/: ChangeLog.md  LICENSE  jhc-frontend.cabal
jhc-frontend/src/: Options.hs  RawFiles.hs
jhc-frontend/src/DerivingDrift/: DataP.hs  RuleUtils.hs  StandardRules.hs
jhc-frontend/src/FrontEnd/: Class.hs  DependAnalysis.hs  Exports.hs  HsPretty.hs  HsSyn.hs  KindInfer.hs  Rename.hs  Representation.hs  SrcLoc.hs  Unlit.hs
jhc-frontend/src/FrontEnd/Lex/: Lexer.hs.gen  Parser.hs.gen  Parser.y  Post.hs
jhc-frontend/src/FrontEnd/Tc/: Kind.hs  Main.hs  Monad.hs
jhc-frontend/src/Version/: Config.hs
jhc-grin/: jhc-grin.cabal
jhc-grin/src/C/: FromGrin2.hs
jhc-grin/src/Grin/: SSimplify.hs
lib/ext/: binary.yaml
lib/flat-foreign/: MarshalError.hs
lib/haskell-extras/: Foreign.hs  NewSort.hs  Prelude.hs  haskell-extras.yaml
lib/haskell-extras/Data/: Array.hs  Bits.hs  Dynamic.hs  IORef.hs  Ix.hs  Typeable.hs
lib/haskell-extras/Data/Array/: Unboxed.hs
lib/haskell-extras/Foreign/C/: Error.hs
lib/haskell-extras/Foreign/Marshal/: Error.hs
lib/haskell-extras/System/: Info.hspp  Random.hs  Time.hs
lib/haskell-extras/Text/: Printf.hs
lib/haskell2010/: haskell2010.yaml.m4
lib/haskell98/: Time.hs
lib/jhc/: Numeric.hs
lib/jhc-prim/Jhc/Prim/: Char32.hs  Generics.hs  List.hs  Mem.hs  SelfPtr.hs  Tuple.hs  Type.hs
lib/jhc/Data/: Ratio.hs
lib/jhc/Foreign/C/: Error.hs  String.hs
lib/jhc/Foreign/Marshal/: Alloc.hs  Utils.hs
lib/jhc/Jhc/: Function.hs  Handle.hs  List.hs  Maybe.hs  Show.hs  Storable.hs  String.hs
lib/jhc/Jhc/Inst/: Enum.hs
lib/jhc/Jhc/Text/: Read.hs
lib/jhc/Prelude/: Float.hs  Text.hs
