name:                jhc-app
version:             0.1.0.0
synopsis:            jhc compiler application
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable jhc
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell98

  other-modules:
    Interactive
    Util.Interact

  build-depends:
    base         == 4.7.*,
    directory    >= 1.2.1 && <1.3,
    filepath     >= 1.3.0.2 && <1.4,
    bytestring   >= 0.10.4 && <0.11,
    mtl          >= 2.1.3 && <2.2,
    containers   >= 0.5.5 && <0.6,
    pretty       >= 1.1.1 && <1.2,
    process      == 1.2.*,
    regex-compat >= 0.95.1 && <0.96,

    jhc-compat   == 0.1.0.*,
    jhc-common   == 0.1.0.*,
    jhc-frontend == 0.1.0.*,
    jhc-core     == 0.1.0.*,
    jhc-grin     == 0.1.0.*

  include-dirs: .

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
