name:                jhc-common
version:             0.1.0.0
synopsis:            jhc compiler foundation library
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

extra-source-files:
  src/StringTable/StringTable_cbits.h
  src/StringTable/StringTable_cbits.c
  hs_src_config.h

library
  exposed-modules:
    Cmm.Number
    Cmm.Op

    StringTable.Atom

    Name.Binary
    Name.Id
    Name.Internals
    Name.Name
    Name.Names
    Name.Prim
    Name.VConsts

    Info.Info
    Info.Properties
    Info.Types

    C.FFI
    C.Prims

    Doc.Chars
    Doc.DocLike
    Doc.Pretty
    Doc.PPrint

    GenUtil

    Util.BitSet
    Util.ContextMonad
    Util.ExitCodes
    Util.Gen
    Util.GMap
    Util.Graph
    Util.Graphviz
    Util.HasSize
    Util.Inst
    Util.IntBag
    Util.NameMonad
    Util.Once
    Util.Perhaps
    Util.Progress
    Util.ReaderWriter
    Util.RWS
    Util.SameShape
    Util.Seq
    Util.SetLike
    Util.Std
    Util.UnionFind
    Util.UnionSolve
    Util.UniqueMonad
    Util.VarName
    Util.YAML

    Ty.Level

    Support.CanType
    Support.CFF
    Support.Compat
    Support.FreeVars
    Support.IniParse
    Support.MapBinaryInstance
    Support.MD5
    Support.TempDir
    Support.Tickle
    Support.Transform
    Support.Tuple
    Support.Unparse

    PackedString

    Options
    RawFiles

    Stats

    FlagDump
    FlagOpts

    Version.Config
    Version.Version

    Fixer.Fixer
    Fixer.Supply
    Fixer.VMap

  build-depends:
    array        == 0.5.*,
    base         == 4.7.*,
    binary       >= 0.7.1 && <0.8,
    bytestring   >= 0.10.4 && < 0.11,
    containers   >= 0.5.5 && < 0.6,
    directory    >= 1.2.1 && < 1.3,
    fgl          >= 5.5.1 && < 5.6,
    file-embed   >= 0.0.8.2 && < 0.1,
    filepath     == 1.3.*,
    mtl          >= 2.1.3 && < 2.3,
    pretty       >= 1.1.1 && < 1.2,
    syb          >= 0.4.4 && < 0.5,
    transformers == 0.3.*,
    unix         == 2.7.*,
    utf8-string  >= 1 && < 1.1,

    jhc-compat   == 0.1.0.*

  hs-source-dirs:      src
  default-language:    Haskell98

  build-tools:         hsc2hs

  include-dirs:        . src/StringTable cbits
  c-sources:           src/StringTable/StringTable_cbits.c
                       cbits/lookup3.c
                       cbits/md5sum.c

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
