name:                jhc-compat
version:             0.1.0.0
synopsis:            jhc's haskell98 library
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  exposed-modules:
    Array
    Char
    Complex
    CPUTime
    Directory
    IO
    Ix
    List
    Locale
    Maybe
    Monad
    Random
    Ratio
    System
    Time

  build-depends:
    base       == 4.7.*,
    array      == 0.5.*,
    directory  >= 1.2.1 && < 1.3,
    old-locale == 1.0.*,
    random     == 1.1.*,
    process    == 1.2.*,
    old-time   == 1.1.*

  hs-source-dirs:      haskell98
  default-language:    Haskell98
