name:                jhc-core
version:             0.1.0.0
synopsis:            jhc core optimizer
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    E.Inline
    E.Binary
    E.E
    E.FromHs
    E.Annotate
    E.PrimOpt
    E.Eval
    E.TypeAnalysis
    E.Main
    E.FreeVars
    E.Values
    E.Diff
    E.PrimDecode
    E.LambdaLift
    E.LetFloat
    E.Show
    E.Subst
    E.Rules
    E.TypeCheck
    E.WorkerWrapper
    E.Eta
    E.Traverse
    E.Program
    E.Lint
    E.CPR
    E.Demand
    E.SSimplify
    E.Type
    --E.ToHs

    FrontEnd.Tc.Module
    FrontEnd.FrontEnd

    Ho.Binary
    Ho.Build
    Ho.Collected
    Ho.Library
    Ho.ReadSource
    Ho.Type

    DataConstructors

    Info.Binary

    Cmm.OpEval

    Util.FilterInput

  build-depends:
    base         == 4.7.*,
    mtl          >= 2.1.3 && <2.2,
    binary       >= 0.7.1 && <0.8,
    containers   >= 0.5.5 && <0.6,
    pretty       >= 1.1.1 && <1.2,
    bytestring   >= 0.10.4 && <0.11,
    filepath     >= 1.3.0 && <1.4,
    directory    >= 1.2.1 && <1.3,
    process      == 1.2.*,
    utf8-string  >= 1 && <1.1,
    unix         == 2.7.*,
    zlib         >= 0.5.4 && <0.6,
    HsSyck       == 0.53.*,

    jhc-compat   == 0.1.0.*,
    jhc-common   == 0.1.0.*,
    jhc-frontend == 0.1.0.*

  hs-source-dirs:      src
  default-language:    Haskell98

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
