name:                jhc-frontend
version:             0.1.0.0
synopsis:            haskell frontend stripped out from jhc
description:         Parses and typechecks haskell code.
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    FrontEnd.Class
    FrontEnd.DataConsAssump
    FrontEnd.DeclsDepends
    FrontEnd.DependAnalysis
    FrontEnd.Desugar
    FrontEnd.Diagnostic
    FrontEnd.Exports
    FrontEnd.HsErrors
    FrontEnd.HsPretty
    FrontEnd.HsSyn
    FrontEnd.Infix
    FrontEnd.KindInfer
    FrontEnd.Lex.Fixity
    FrontEnd.Lex.Layout
    FrontEnd.Lex.Lexer
    FrontEnd.Lex.Parse
    FrontEnd.Lex.ParseMonad
    FrontEnd.Lex.Parser
    FrontEnd.Lex.Post
    FrontEnd.Rename
    FrontEnd.Representation
    FrontEnd.SrcLoc
    FrontEnd.Syn.Options
    FrontEnd.Syn.Traverse
    FrontEnd.Tc.Class
    FrontEnd.Tc.Kind
    FrontEnd.Tc.Main
    FrontEnd.Tc.Monad
    FrontEnd.Tc.Type
    FrontEnd.Tc.Unify
    FrontEnd.TypeSigs
    FrontEnd.TypeSynonyms
    FrontEnd.Unlit
    FrontEnd.Warning

    Util.Relation

    FindFixpoint

    DerivingDrift.Drift
    DerivingDrift.DataP
    DerivingDrift.StandardRules
    DerivingDrift.RuleUtils

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric

  build-depends:
    base       == 4.7.*,
    mtl        >= 2.1.3 && <2.2,
    containers >= 0.5.5 && <0.6,
    binary     >= 0.7.1 && <0.8,
    pretty     >= 1.1.1 && <1.2,
    array      == 0.5.*,
    syb        >= 0.4.4 && <0.5,

    jhc-compat == 0.1.0.*,
    jhc-common == 0.1.0.*

  hs-source-dirs:      src
  build-tools:         alex == 3.1.4, happy == 1.19.5
  default-language:    Haskell98
