name:                jhc-grin
version:             0.1.0.0
synopsis:            jhc grin backend
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Grin.DeadCode
    Grin.Devolve
    Grin.EvalInline
    Grin.FromE
    Grin.Grin
    Grin.HashConst
    Grin.Lint
    Grin.Main
    Grin.NodeAnalyze
    Grin.Noodle
    Grin.Optimize
    Grin.Show
    Grin.SSimplify
    Grin.StorageAnalysis
    Grin.Val
    Grin.Whiz

    C.FromGrin2
    C.Generate

  build-depends:
    base         == 4.7.*,
    mtl          >= 2.1.3 && <2.2,
    containers   >= 0.5.5 && <0.6,
    fgl          >= 5.5.1 && <5.6,
    bytestring   >= 0.10.4 && <0.11,
    directory    >= 1.2.1 && <1.3,
    utf8-string  >= 1 && <1.1,
    filepath     == 1.3.*,
    pretty       >= 1.1.1 && <1.2,

    jhc-compat   == 0.1.0.*,
    jhc-common   == 0.1.0.*,
    jhc-core     == 0.1.0.*

  hs-source-dirs:      src
  default-language:    Haskell98

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
